--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 <body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
 
-    <!-- Top Nav -->
     <nav class="bg-white shadow-sm sticky top-0 z-50 px-4 py-4 flex justify-between items-center">
         <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-purple-700">Petal Chain</h1>
         <div class="relative cursor-pointer" onclick="toggleCart()">
@@ -24,13 +23,11 @@
         </div>
     </nav>
 
-    <!-- Hero -->
     <header class="bg-gradient-to-r from-purple-600 to-indigo-600 text-white py-10 px-6 text-center">
         <h2 class="text-3xl md:text-5xl font-extrabold mb-3 tracking-tight">Stop scrolling, start shopping – fresh picks delivered fast!</h2>
         <p class="text-lg md:text-xl opacity-90">Your favorites. Right to your door.</p>
     </header>
 
-    <!-- Search & Categories -->
     <div class="max-w-6xl mx-auto px-4 py-6">
         <div class="flex flex-col md:flex-row gap-4 mb-6">
             <div class="relative flex-grow">
@@ -38,7 +35,7 @@
                     id="searchInput" 
                     type="text" 
                     placeholder="Search products..." 
-                    class="w-full pl-10 pr-4 py-3 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 focus:border-transparent shadow-sm text-lg"
+                    class="w-full pl-10 pr-4 py-3 rounded-full border border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500 shadow-sm text-lg"
                     oninput="filterProducts()"
                 >
                 <i class="fa-solid fa-search absolute left-4 top-1/2 -translate-y-1/2 text-gray-400"></i>
@@ -46,22 +43,21 @@
         </div>
 
         <div class="flex flex-wrap gap-3 mb-8">
-            <button onclick="filterCategory('all')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition active:bg-purple-300">All</button>
-            <button onclick="filterCategory('Snacks')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition active:bg-purple-300">Snacks</button>
-            <button onclick="filterCategory('Soda')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition active:bg-purple-300">Soda</button>
-            <button onclick="filterCategory('Airtime')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition active:bg-purple-300">Airtime</button>
-            <button onclick="filterCategory('Clothes')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition active:bg-purple-300">Clothes</button>
+            <button onclick="filterCategory('all')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition">All</button>
+            <button onclick="filterCategory('Snacks')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition">Snacks</button>
+            <button onclick="filterCategory('Soda')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition">Soda</button>
+            <button onclick="filterCategory('Airtime')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition">Airtime</button>
+            <button onclick="filterCategory('Clothes')" class="category-btn px-5 py-2.5 rounded-full font-medium bg-purple-100 text-purple-800 hover:bg-purple-200 transition">Clothes</button>
         </div>
 
         <div id="product-container" class="product-grid"></div>
     </div>
 
-    <!-- Cart Drawer -->
     <div id="cart-drawer" class="fixed top-0 right-0 h-full w-full md:w-96 bg-white shadow-2xl z-50 overflow-y-auto cart-slide">
         <div class="p-6">
             <div class="flex justify-between items-center mb-6">
                 <h2 class="text-2xl font-bold text-gray-900">Your Cart</h2>
-                <button onclick="toggleCart()" class="text-gray-500 hover:text-gray-800 text-2xl">×</button>
+                <button onclick="toggleCart()" class="text-gray-500 hover:text-gray-800 text-3xl">×</button>
             </div>
 
             <div id="cart-items" class="mb-8 space-y-4"></div>
@@ -89,11 +85,15 @@
         </div>
     </div>
 
-    <!-- Footer remains unchanged -->
+    <footer class="mt-auto bg-gray-900 text-gray-300 py-10 px-6">
+        <div class="max-w-6xl mx-auto text-center text-sm">
+            © 2026 Petal Chain - The Market. All rights reserved.
+        </div>
+    </footer>
 
     <script>
-        const BUSINESS_NAME = "Petal Chain - The Market";
-        const WHATSAPP_NUMBER = "27646575290";      // 0646575290 → international format
+        const WHATSAPP_NUMBER = "27646575290"; 
+        const DELIVERY_FEE = 3.00;
 
         const products = [
             { id: 1, name: "Lay's Classic", price: 18.50, category: "Snacks", img: "https://images.unsplash.com/photo-1566478989037-eec170784d0b?auto=format&fit=crop&w=300&q=80" },
@@ -107,18 +107,16 @@
         let cart = [];
         let currentCategory = 'all';
 
-        const DELIVERY_FEE = 3.00;
-
-        function renderProducts(filteredProducts = products) {
+        function renderProducts(list = products) {
             const container = document.getElementById('product-container');
-            container.innerHTML = filteredProducts.map(p => `
-                <div class="bg-white rounded-3xl p-4 shadow-md border border-gray-100 hover:shadow-xl transition-shadow duration-300 flex flex-col h-full">
+            container.innerHTML = list.map(p => `
+                <div class="bg-white rounded-3xl p-4 shadow-md border border-gray-100 flex flex-col h-full">
                     <img src="${p.img}" class="w-full h-40 object-cover rounded-2xl mb-4">
                     <p class="text-xs text-purple-600 font-semibold uppercase mb-1">${p.category}</p>
                     <h3 class="font-bold text-base md:text-lg mb-2 flex-grow">${p.name}</h3>
                     <div class="flex justify-between items-center">
                         <span class="font-extrabold text-xl text-gray-900">R${p.price.toFixed(2)}</span>
-                        <button onclick="addToCart(${p.id})" class="bg-purple-700 text-white h-10 w-10 rounded-full flex items-center justify-center hover:bg-purple-800 transition-colors shadow-md hover:shadow-lg">
+                        <button onclick="addToCart(${p.id})" class="bg-purple-700 text-white h-10 w-10 rounded-full flex items-center justify-center hover:bg-purple-800 transition shadow-md">
                             <i class="fa-solid fa-plus text-lg"></i>
                         </button>
                     </div>
@@ -135,7 +133,7 @@
         function updateUI() {
             const count = cart.length;
             const subtotal = cart.reduce((sum, item) => sum + item.price, 0);
-            const total = subtotal + DELIVERY_FEE;
+            const total = count > 0 ? subtotal + DELIVERY_FEE : 0;
 
             document.getElementById('cart-count').innerText = count;
             document.getElementById('cart-subtotal').innerText = `R${subtotal.toFixed(2)}`;
@@ -167,7 +165,7 @@
         }
 
         function sendToWhatsApp() {
-            if (cart.length === 0) return;
+            if (cart.length === 0) return alert("Your cart is empty!");
 
             const subtotal = cart.reduce((sum, item) => sum + item.price, 0);
             const total = subtotal + DELIVERY_FEE;
@@ -179,7 +177,7 @@
 
             let itemList = "";
             for (const [name, qty] of Object.entries(itemsSummary)) {
-                itemList += `• \( {name} × \){qty}\n`;
+                itemList += `• ${name} × ${qty}\n`;
             }
 
             const message = `*Petal Chain Order*\n\n` +
@@ -187,20 +185,9 @@
                             `*Subtotal:* R${subtotal.toFixed(2)}\n` +
                             `*Delivery Fee:* R${DELIVERY_FEE.toFixed(2)}\n` +
                             `*Total Amount:* R${total.toFixed(2)}\n\n` +
-                            `Please confirm my order!\n\n` +
-                            `→ Please reply with your delivery location (share via WhatsApp location pin or Google Maps link)`;
+                            `Please confirm my order!`;
 
-            const encoded = encodeURIComponent(message);
-            window.open(`https://wa.me/\( {WHATSAPP_NUMBER}?text= \){encoded}`, '_blank');
-        }
-
-        function filterProducts() {
-            const query = document.getElementById('searchInput').value.toLowerCase().trim();
-            let filtered = products.filter(p => p.name.toLowerCase().includes(query));
-            if (currentCategory !== 'all') {
-                filtered = filtered.filter(p => p.category === currentCategory);
-            }
-            renderProducts(filtered);
+            window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(message)}`, '_blank');
         }
 
         function filterCategory(category) {
@@ -215,7 +202,13 @@
             filterProducts();
         }
 
-        // Initial render
+        function filterProducts() {
+            const query = document.getElementById('searchInput').value.toLowerCase().trim();
+            let filtered = products.filter(p => p.name.toLowerCase().includes(query));
+            if (currentCategory !== 'all') filtered = filtered.filter(p => p.category === currentCategory);
+            renderProducts(filtered);
+        }
+
         renderProducts();
         updateUI();
     </script>
