--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <nav class="bg-white shadow-sm sticky top-0 z-50 px-4 py-4 flex justify-between items-center">
-        <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-purple-700">Petal Chain</h1>
+        <h1 class="text-2xl md:text-3xl font-extrabold tracking-tight text-purple-700">Petal Chain - The Market</h1>
         <div class="relative cursor-pointer" onclick="toggleCart()">
             <i class="fa-solid fa-cart-shopping text-3xl text-gray-800 hover:text-purple-700 transition-colors"></i>
             <span id="cart-count" class="absolute -top-2 -right-2 bg-purple-600 text-white text-xs font-bold rounded-full h-6 w-6 flex items-center justify-center shadow">0</span>
