Update product list in index.html

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
         const DELIVERY_FEE = 3.00;
 
         const products = [
-            { id: 1, name: "Lay's Classic", price: 18.50, category: "Snacks", img: "https://images.unsplash.com/photo-1566478989037-eec170784d0b?w=500" },
-            { id: 2, name: "Coca-Cola 500ml", price: 15.00, category: "Soda", img: "https://images.unsplash.com/photo-1622483767028-3f66f32aef97?w=500" },
-            { id: 7, name: "Combo: Chips & Dip", price: 45.00, category: "Deals", img: "https://images.unsplash.com/photo-1621447509323-9899ac4dd811?w=500" },
-            { id: 8, name: "Bulk Soda (6 Pack)", price: 75.00, category: "Deals", img: "https://images.unsplash.com/photo-1527960669566-f882ba85a4c6?w=500" },
-            { id: 9, name: "Summer Hoodie", price: 199.00, category: "Deals", img: "https://images.unsplash.com/photo-1556821840-3a63f95609a7?w=500" },
-            { id: 5, name: "White Oversized Tee", price: 250.00, category: "Clothes", img: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?w=500" },
-            { id: 6, name: "Energy Drink", price: 22.00, category: "Soda", img: "https://images.unsplash.com/photo-1622483767028-3f66f32aef97?w=500" }
+            { id: 1, name: "SASKO Brown Bread", price: 18.00, category: "Bakery", img: "https://raw.githubusercontent.com/kgolaganopoosa/store/refs/heads/main/products/saskobrownbread.png" },
+            //{ id: 2, name: "Coca-Cola 500ml", price: 15.00, category: "Soda", img: "https://images.unsplash.com/photo-1622483767028-3f66f32aef97?w=500" },
+            //{ id: 7, name: "Combo: Chips & Dip", price: 45.00, category: "Deals", img: "https://images.unsplash.com/photo-1621447509323-9899ac4dd811?w=500" },
+            //{ id: 8, name: "Bulk Soda (6 Pack)", price: 75.00, category: "Deals", img: "https://images.unsplash.com/photo-1527960669566-f882ba85a4c6?w=500" },
+            //{ id: 9, name: "Summer Hoodie", price: 199.00, category: "Deals", img: "https://images.unsplash.com/photo-1556821840-3a63f95609a7?w=500" },
+            //{ id: 5, name: "White Oversized Tee", price: 250.00, category: "Clothes", img: "https://images.unsplash.com/photo-1521572163474-6864f9cf17ab?w=500" },
+            //{ id: 6, name: "Energy Drink", price: 22.00, category: "Soda", img: "https://images.unsplash.com/photo-1622483767028-3f66f32aef97?w=500" }
         ];
 
         let cart = [];
