Replace Coca-Cola with SASKO White Bread in products NGL

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         const products = [
             { id: 1, name: "SASKO Brown Bread", price: 18.00, category: "Bakery", img: "https://raw.githubusercontent.com/kgolaganopoosa/store/refs/heads/main/products/saskobrownbread.png" },
-            //{ id: 2, name: "Coca-Cola 500ml", price: 15.00, category: "Soda", img: "https://images.unsplash.com/photo-1622483767028-3f66f32aef97?w=500" },
+            { id: 2, name: "SASKO White Bread", price: 18.00, category: "Bakery", img: "https://raw.githubusercontent.com/kgolaganopoosa/store/refs/heads/main/products/saskowhitebread.png" },
             //{ id: 7, name: "Combo: Chips & Dip", price: 45.00, category: "Deals", img: "https://images.unsplash.com/photo-1621447509323-9899ac4dd811?w=500" },
             //{ id: 8, name: "Bulk Soda (6 Pack)", price: 75.00, category: "Deals", img: "https://images.unsplash.com/photo-1527960669566-f882ba85a4c6?w=500" },
             //{ id: 9, name: "Summer Hoodie", price: 199.00, category: "Deals", img: "https://images.unsplash.com/photo-1556821840-3a63f95609a7?w=500" },
